<resources>
    <string name="app_name">TestBarcodeReader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tv_result_of_scan">Результат сканирования</string>
    <string name="letters">Буквы</string>
    <string name="numbers">Цифры</string>
    <string name="countOfBarCode">Колличество отсканированных штрих-кодов:</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выход</string>
    <string name="listScannedBarCodes">Список отсканированных штрихкодов</string>
    <string name="send">Отправить</string>
    <string name="check">Проверить</string>
    <string name="button_text_check_and_send">Проверить и отправить</string>
    <string name="barcode_scanner">Сканер штрихкода</string>
    <string name="choose_type_of_scan">Выберите тип сканирования</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="flash_light">Вспышка (в стадии разработки)</string>
    <string name="button_text_scan_gateway">Сканирование шлюза</string>
    <string name="button_text_scan_energy_meter">Сканирование счетчика</string>
    <string name="button_text_scan_zigbee_module">Сканирование модуля ZigBee</string>
    <string name="button_text_scan_router">Сканирование роутера</string>
    <string name="instruction">Инструкция</string>
    <string name="checking">Сохранить</string>
    <string name="clear">Отчистить</string>
    <string name="auto_save">Автосохранение</string>
    <string name="ok">OK</string>
    <string name="button_text_create_new_order">Создать новую заявку</string>

    <string-array name="meter_type_array">
        <item>Meter Type 1</item>
        <item>Meter Type 2</item>
        <item>Meter Type 3</item>
        <item>Meter Type 4</item>
        <item>Meter Type 5</item>
        <item>Meter Type 6</item>
        <item>Meter Type 7</item>
        <item>Meter Type 8</item>
        <item>Meter Type 9</item>
        <item>Meter Type 10</item>
        <item>Meter Type 11</item>
    </string-array>

</resources>
